crates/sdk-tests/tests/endpoint/endpoint_used_twice_fails.rs
use svm_sdk::template;

#[template]
mod Template {
    #[endpoint]
    #[endpoint]
    fn get() {}
}

fn main() {}
